# Jig

./: .gitignore  LICENSE  README.md  SECURITY.md  jig.cmd  jig.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
jig/: __init__.py  __main__.py  agent.py  cli.py  client.py  constants.py  creator.py  factory.py  ollama_client.py  repository.py  utils.py
jig/ui/: __init__.py  console.py  gradio_app.py
